--- a/index.html
+++ b/index.html
@@ -2,59 +2,110 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <header>
+    <img src="./assets/images/logo.svg" alt="" class="logo">
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-item">Home</li>
+        <li class="nav-item">New</li>
+        <li class="nav-item">Popular</li>
+        <li class="nav-item">Trending</li>
+        <li class="nav-item">Categories</li>
+      </ul>
+    </nav>
+  </header>
 
-  The Bright Future of Web 3.0?
+  <main>
+    <section class="featured">
+      <article>
+        <!-- make this a picture element -->
+        <img src="./assets/images/image-web-3-desktop.jpg" alt="" class="featured-img">
+        <h1>The Bright Future of Web 3.0?</h1>
+        <div class="article-content">
+          <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+          <a href="#" class="button">Read more</a>
+        </div>
+      </article>
+    </section>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+    <!-- New articles -->
+    <section class="new-stories">
+      <h2>New</h2>
+      <ul class="new-stories_list">
+        <li class="new-story_item">
+          <article> 
+            <h3>Hydrogen VS Electric Cars</h3>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </article>
+        </li>
+        <li class="new-story_item">
+          <article>
+            <h3>The Downsides of AI Artistry</h3>
+            <p>What are the possible adverse effects of on-demand AI image generation?</p>
+          </article>
+        </li>
+        <li class="new-story_item">
+          <article>
+            <h3>Is VC Funding Drying Up?</h3>
+            <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </article>
+        </li>
+      </ul>
+    </section>
 
-  Read more
+    <!-- Trending stories -->
+    <section class="trending-stories">
+      <ul class="trending-stories_list">
+        <li>
+          <article>
+            <img src="" alt="" class="trending-img">
+            <div class="trending-story-content">
+              <span class="trending-list-number">01</span>
+              <h4>Reviving Retro PCs</h4>
+              <p>What happens when old PCs are given modern upgrades?</p>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article>
+            <img src="" alt="" class="trending-img">
+            <div class="trending-story-content">
+              <span class="trending-list-number">02</span>
+              <h4>Top 10 Laptops of 2022</h4>
+              <p>Our best picks for various needs and budgets.</p>
+            </div>
+          </article>
+        </li>
+        <li>
+          <article>
+            <img src="" alt="" class="trending-img">
+            <div class="trending-story-content">
+              <span class="trending-list-number">03</span>
+              <h4>The Growth of Gaming</h4>
+              <p>  How the pandemic has sparked fresh opportunities.</p>
+            </div>
+          </article>
+        </li>
+      </ul>
+    </section>
 
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+  </main>
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
