--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <header class="header container">
+  <!-- <header class="header container">
     <img src="./assets/images/logo.svg" alt="" class="logo">
     <nav>
       <ul class="nav-list">
@@ -33,18 +33,18 @@
         </li>
       </ul>
     </nav>
-  </header>
+  </header> -->
 
-  <main class="main container grid">
+  <!-- *** inline style - Temp Only -->
+  <main class="main container grid" style="padding-top: 3rem">
     <section class="featured">
-      <article>
-        <!-- make this a picture element -->
-        <picture>
+      <article class="featured-article grid">
+        <picture class="featured-picture">
           <source srcset="./assets/images/image-web-3-desktop.jpg" media="(min-width: 37.5rem)">
           <img src="./assets/images/image-web-3-mobile.jpg" alt="" class="featured-img">
         </picture>
         <h1>The Bright Future of Web 3.0?</h1>
-        <div class="article-content">
+        <div class="featured-article_content">
           <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
           <a href="javascript:;" class="button read-more-btn">Read more</a>
         </div>
