--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="nav-wrapper">
         <img src="./assets/images/logo.svg" alt="" class="logo">
         <button class="mobile-nav-toggle" id="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <img class="icon-hamburger" src="./assets/images/icon-menu.svg" alt="" aria-hidden="true">
+          <img class="icon-hamburger" src="./assets/images/icon-menu.svg" alt="" aria-hidden="false">
           <img class="icon-close" src="./assets/images/icon-menu-close.svg" alt="" aria-hidden="true">
           <!-- make this 'sr-only' -->
           <span class="visually-hidden">Menu</span>
