--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- use page wrapper to apply overlay when mobile menu activate -->
-  <div class="page-wrapper">
+  <!-- <div class="page-wrapper"> -->
 
   <header class="header">
     <div class="container">
@@ -114,7 +114,7 @@
     </section>
 
   </main>
-  </div>
+
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
