--- a/index.html
+++ b/index.html
@@ -11,18 +11,13 @@
   <title>Frontend Mentor | News homepage</title>
 </head>
 <body>
-  <!-- use page wrapper to apply overlay when mobile menu activate -->
-  <!-- <div class="page-wrapper"> -->
 
   <header class="header">
     <div class="container">
       <div class="nav-wrapper">
         <img src="./assets/images/logo.svg" alt="" class="logo">
         <button class="mobile-nav-toggle" id="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <!-- <img class="icon-hamburger" src="./assets/images/icon-menu.svg" alt="" aria-hidden="false">
-          <img class="icon-close" src="./assets/images/icon-menu-close.svg" alt="" aria-hidden="true"> -->
-          <!-- make this 'sr-only' -->
-          <span class="visually-hidden">Menu</span>
+          <span class="sr-only">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
           <ul class="nav-list" aria-label="Primary" role="list">
@@ -58,19 +53,19 @@
       <ul class="new-stories_list">
         <li class="new-story_item">
           <article> 
-            <h3>Hydrogen VS Electric Cars</h3>
+            <h3><a href="#" class="article-link">Hydrogen VS Electric Cars</a></h3>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
           </article>
         </li>
         <li class="new-story_item">
           <article>
-            <h3>The Downsides of AI Artistry</h3>
+            <h3><a href="#" class="article-link">The Downsides of AI Artistry</a></h3>
             <p>What are the possible adverse effects of on-demand AI image generation?</p>
           </article>
         </li>
         <li class="new-story_item">
           <article>
-            <h3>Is VC Funding Drying Up?</h3>
+            <h3><a href="#" class="article-link">Is VC Funding Drying Up?</a></h3>
             <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
           </article>
         </li>
@@ -85,7 +80,7 @@
             <img src="./assets/images/image-retro-pcs.jpg" alt="" class="trending-img">
             <div class="trending-story_content">
               <span class="trending-list-number">01</span>
-              <h4>Reviving Retro PCs</h4>
+              <h4><a href="#" class="article-link">Reviving Retro PCs</a></h4>
               <p>What happens when old PCs are given modern upgrades?</p>
             </div>
           </article>
@@ -95,7 +90,7 @@
             <img src="./assets/images/image-top-laptops.jpg" alt="" class="trending-img">
             <div class="trending-story_content">
               <span class="trending-list-number">02</span>
-              <h4>Top 10 Laptops of 2022</h4>
+              <h4><a href="#" class="article-link">Top 10 Laptops of 2022</a></h4>
               <p>Our best picks for various needs and budgets.</p>
             </div>
           </article>
@@ -105,8 +100,8 @@
             <img src="./assets/images/image-gaming-growth.jpg" alt="" class="trending-img">
             <div class="trending-story_content">
               <span class="trending-list-number">03</span>
-              <h4>The Growth of Gaming</h4>
-              <p>  How the pandemic has sparked fresh opportunities.</p>
+              <h4><a href="#" class="article-link">The Growth of Gaming</a></h4>
+              <p>How the pandemic has sparked fresh opportunities.</p>
             </div>
           </article>
         </li>
@@ -115,10 +110,12 @@
 
   </main>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="footer">
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io/?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.frontendmentor.io/profile/MattPahuta" target="_blank">Matt Pahuta</a>.
+    </div>
+  </footer>
 
   <script src="./js/index.js"></script>
 </body>
