--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <title>Frontend Mentor | News homepage</title>
 </head>
 <body>
-
   <header class="header">
     <div class="container">
       <div class="nav-wrapper">
@@ -20,7 +19,7 @@
           <span class="sr-only">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
-          <ul class="nav-list" aria-label="Primary" role="list">
+          <ul class="nav-list" aria-label="Primary">
             <li><a href="#">Home</a></li>
             <li><a href="#">New</a></li>
             <li><a href="#">Popular</a></li>
@@ -31,10 +30,9 @@
       </div>
     </div>
   </header>
-
   <main class="main container grid">
     <section class="featured">
-      <article class="featured-article grid">
+      <div class="featured-article grid">
         <picture class="featured-picture">
           <source srcset="./assets/images/image-web-3-desktop.jpg" media="(min-width: 37.5rem)">
           <img src="./assets/images/image-web-3-mobile.jpg" alt="" class="featured-img">
@@ -44,72 +42,66 @@
           <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
           <a href="javascript:;" class="button read-more-btn">Read more</a>
         </div>
-      </article>
+      </div>
     </section>
-
-    <!-- New articles -->
     <section class="new-stories">
       <h2 class="new-stores-heading">New</h2>
       <ul class="new-stories_list">
         <li class="new-story_item">
-          <article> 
+          <div> 
             <h3><a href="#" class="article-link">Hydrogen VS Electric Cars</a></h3>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-          </article>
+          </div>
         </li>
         <li class="new-story_item">
-          <article>
+          <div>
             <h3><a href="#" class="article-link">The Downsides of AI Artistry</a></h3>
             <p>What are the possible adverse effects of on-demand AI image generation?</p>
-          </article>
+          </div>
         </li>
         <li class="new-story_item">
-          <article>
+          <div>
             <h3><a href="#" class="article-link">Is VC Funding Drying Up?</a></h3>
             <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-          </article>
+          </div>
         </li>
       </ul>
     </section>
-
-    <!-- Trending stories -->
     <section class="trending-stories">
       <ul class="trending-stories_list">
         <li class="trending-story_item">
-          <article class="trending-article flex">
-            <img src="./assets/images/image-retro-pcs.jpg" alt="" class="trending-img">
+          <div class="trending-article flex">
+            <img src="./assets/images/image-retro-pcs.jpg" alt="Retro looking computers and peripherals" class="trending-img">
             <div class="trending-story_content">
               <span class="trending-list-number">01</span>
               <h4><a href="#" class="article-link">Reviving Retro PCs</a></h4>
               <p>What happens when old PCs are given modern upgrades?</p>
             </div>
-          </article>
+          </div>
         </li>
         <li class="trending-story_item">
-          <article class="trending-article flex">
-            <img src="./assets/images/image-top-laptops.jpg" alt="" class="trending-img">
+          <div class="trending-article flex">
+            <img src="./assets/images/image-top-laptops.jpg" alt="Close-up of computer keyboard keys" class="trending-img">
             <div class="trending-story_content">
               <span class="trending-list-number">02</span>
               <h4><a href="#" class="article-link">Top 10 Laptops of 2022</a></h4>
               <p>Our best picks for various needs and budgets.</p>
             </div>
-          </article>
+          </div>
         </li>
         <li class="trending-story_item">
-          <article class="trending-article flex">
-            <img src="./assets/images/image-gaming-growth.jpg" alt="" class="trending-img">
+          <div class="trending-article flex">
+            <img src="./assets/images/image-gaming-growth.jpg" alt="Video game controller hovering above a person's hand" class="trending-img">
             <div class="trending-story_content">
               <span class="trending-list-number">03</span>
               <h4><a href="#" class="article-link">The Growth of Gaming</a></h4>
               <p>How the pandemic has sparked fresh opportunities.</p>
             </div>
-          </article>
+          </div>
         </li>
       </ul>
     </section>
-
   </main>
-
   <footer class="footer">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io/?ref=challenge" target="_blank">Frontend Mentor</a>. 
